New QIR Grouping pass

--- a/src/passes/CMakeLists.txt
+++ b/src/passes/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(QirBarrierBeforeFinalMeasurementsPass MODULE QirBarrierBeforeFinalMeasurements.cpp)
 add_library(QirRemoveNonEntrypointFunctionsPass MODULE QirRemoveNonEntrypointFunctions.cpp)
 add_library(QirCXCancellationPass MODULE QirCXCancellation.cpp)
+add_library(QirGroupingPass MODULE QirGrouping.cpp)
