Now we have an actual pass manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,52 @@
-cmake_minimum_required(VERSION 3.22.1)
+cmake_minimum_required(VERSION 3.20)
 project(QirPassManager
-  VERSION 0.1
+  VERSION 1.0
   DESCRIPTION "QIR Pass Manager")
 
-# Find LLVMConfig.cmake
-find_path(LLVM_CONFIG_DIR LLVMConfig.cmake
-  HINTS
-  "${CMAKE_PREFIX_PATH}"
-  ENV LLVM_DIR
-)
+# Set the C++ standard
+set(CMAKE_CXX_STANDARD 14)
 
-if (NOT LLVM_CONFIG_DIR)
-  message(FATAL_ERROR "LLVMConfig.cmake not found. Set CMAKE_PREFIX_PATH or LLVM_DIR.")
-endif()
-
-message(STATUS "Using LLVMConfig.cmake in: ${LLVM_CONFIG_DIR}")
-
-# Include LLVMConfig.cmake
-list(APPEND CMAKE_PREFIX_PATH "${LLVM_CONFIG_DIR}")
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_CONFIG_DIR}")
+# Set the paths to LLVM libraries and headers
+# You can use llvm-config to obtain the necessary flags
 find_package(LLVM REQUIRED CONFIG)
 
-# Set up LLVM-specific flags
-add_definitions(${LLVM_DEFINITIONS})
+# Add the LLVM include directories
 include_directories(${LLVM_INCLUDE_DIRS})
-link_directories(${LLVM_LIBRARY_DIRS})
-
-# Add the passes directory to include paths
-include_directories(src/headers)
+add_definitions(${LLVM_DEFINITIONS})
 
 # Build your executable
-add_executable(apply_passes tests/apply_passes.cpp)
+#add_executable(main 
+#    tests/main.cpp
+#    src/QirPassManager.cpp
+#    src/passes/QirBarrierBeforeFinalMeasurements.cpp
+#    src/passes/QirCXCancellation.cpp
+#    src/passes/QirGrouping.cpp
+#    src/passes/QirRemoveBasicBlocksWithSingleNonConditionalBranchInsts.cpp
+#    src/passes/QirRemoveNonEntrypointFunctions.cpp
+#)
 
-# Include passes subdirectory
-add_subdirectory(src/passes)
+# Add the source files for compilation
+file(GLOB SOURCES
+    src/QirPassManager.cpp
+    src/passes/*.cpp
+    tests/main.cpp
+)
 
-# Link your executable with LLVM libraries
-target_link_libraries(apply_passes PRIVATE LLVM)
+# Add the sources to the executable
+add_executable(main ${SOURCES})
+
+# Link against LLVM libraries
+target_link_libraries(main
+    PRIVATE
+    LLVM
+    #LLVMCore
+    #LLVMSupport
+)
+
+# Print the include directories and libraries found
+message("LLVM_INCLUDE_DIRS: ${LLVM_INCLUDE_DIRS}")
+message("LLVM_DEFINITIONS: ${LLVM_DEFINITIONS}")
+
+# Print the LLVM libraries being linked
+get_target_property(LLVM_LIBS main LINK_LIBRARIES)
+message("LLVM_LIBS: ${LLVM_LIBS}")
