I moved a previous commit from PassManager to this repo to have a version with dynamic invoking of passes as shared objects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,45 +1,45 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.22.1)
 project(QirPassManager
-  VERSION 1.0
+  VERSION 0.1
   DESCRIPTION "QIR Pass Manager")
 
-# Set the C++ standard
-set(CMAKE_CXX_STANDARD 14)
+# Find LLVMConfig.cmake
+find_path(LLVM_CONFIG_DIR LLVMConfig.cmake
+  HINTS
+  "${CMAKE_PREFIX_PATH}"
+  ENV LLVM_DIR
+)
 
-# Set the paths to LLVM libraries and headers
-# You can use llvm-config to obtain the necessary flags
+if (NOT LLVM_CONFIG_DIR)
+  message(FATAL_ERROR "LLVMConfig.cmake not found. Set CMAKE_PREFIX_PATH or LLVM_DIR.")
+endif()
+
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_CONFIG_DIR}")
+
+# Include LLVMConfig.cmake
+list(APPEND CMAKE_PREFIX_PATH "${LLVM_CONFIG_DIR}")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_CONFIG_DIR}")
 find_package(LLVM REQUIRED CONFIG)
 
-# Add the LLVM include directories
-include_directories(${LLVM_INCLUDE_DIRS})
+# Set up LLVM-specific flags
 add_definitions(${LLVM_DEFINITIONS})
+include_directories(${LLVM_INCLUDE_DIRS})
+link_directories(${LLVM_LIBRARY_DIRS})
 
-# Specify the main source file using the CUSTOM_MAIN_SOURCE variable
-set(MAIN_SOURCE ${CUSTOM_MAIN_SOURCE})
-
-# Add the source files for compilation
-file(GLOB SOURCES
-    src/QirPassManager.cpp
-    src/passes/*.cpp
-    ${MAIN_SOURCE}
-)
+# Add the passes directory to include paths
+include_directories(src/headers)
 
 # Get the executable name from the CUSTOM_EXECUTABLE_NAME variable
 set(EXECUTABLE_NAME ${CUSTOM_EXECUTABLE_NAME})
 
-# Add the sources to the executable
-add_executable(${EXECUTABLE_NAME} ${SOURCES})
+# Specify the main source file using the CUSTOM_MAIN_SOURCE variable
+set(MAIN_SOURCE ${CUSTOM_MAIN_SOURCE})
 
-# Link against LLVM libraries
-target_link_libraries(${EXECUTABLE_NAME}
-    PRIVATE
-    LLVM
-)
+# Build your executable
+add_executable(${EXECUTABLE_NAME} ${MAIN_SOURCE})
 
-# Print the include directories and libraries found
-message("LLVM_INCLUDE_DIRS: ${LLVM_INCLUDE_DIRS}")
-message("LLVM_DEFINITIONS: ${LLVM_DEFINITIONS}")
+# Include passes subdirectory
+add_subdirectory(src/passes)
 
-# Print the LLVM libraries being linked
-get_target_property(LLVM_LIBS ${EXECUTABLE_NAME} LINK_LIBRARIES)
-message("LLVM_LIBS: ${LLVM_LIBS}")
+# Link your executable with LLVM libraries
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE LLVM)
