The passes are now sent by the clients instead of being hardcoded in the daemon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,21 @@ project(QirPassManager
 # Set the C++ standard
 set(CMAKE_CXX_STANDARD 14)
 
+# Find the Threads package
+find_package(Threads REQUIRED)
+
+# Set LLVM_ENABLE_THREADS to ON
+set(LLVM_ENABLE_THREADS ON)
+
+# Find sys/socket.h
+#find_path(UNIX_INCLUDE_PATH sys/socket.h)
+#
+#if (NOT UNIX_INCLUDE_PATH)
+#  message(FATAL_ERROR "socket.h not found.")
+#endif()
+#
+#message(STATUS "Using sys/socket.h in: ${UNIX_INCLUDE_PATH}")
+
 # Find LLVMConfig.cmake
 find_path(LLVM_CONFIG_DIR LLVMConfig.cmake
   HINTS
@@ -32,27 +47,26 @@ link_directories(${LLVM_LIBRARY_DIRS})
 # Add the passes directory to include paths
 include_directories(src/headers)
 
-# Get the executable name from the CUSTOM_EXECUTABLE_NAME variable
-set(EXECUTABLE_NAME ${CUSTOM_EXECUTABLE_NAME})
-
 # Specify the main source file using the CUSTOM_MAIN_SOURCE variable
 set(MAIN_SOURCE ${CUSTOM_MAIN_SOURCE})
 
 # Add the source files for compilation
 file(GLOB SOURCES
     src/QirPassManager.cpp
-    #src/passes/*.cpp
     ${MAIN_SOURCE}
 )
 
 # Get the executable name from the CUSTOM_EXECUTABLE_NAME variable
 set(EXECUTABLE_NAME ${CUSTOM_EXECUTABLE_NAME})
 
-# Build your executable
+# Build the executable
 add_executable(${EXECUTABLE_NAME} ${SOURCES})
 
 # Include passes subdirectory
 add_subdirectory(src/passes)
 
-# Link your executable with LLVM libraries
+# Link the executable with LLVM and Threads libraries
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE LLVM)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE Threads::Threads)
+#target_link_libraries(${EXECUTABLE_NAME} PRIVATE socket)
+#target_include_directories(${EXECUTABLE_NAME} PRIVATE ${UNIX_INCLUDE_PATH})
