Now we have a struct for handling metadata in our own context. The metadata is being created in src/QMPM_d.cpp and read (as an example) in src/passes/QirReplaceConstantBranches.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ find_package(LLVM REQUIRED CONFIG)
 # Set up LLVM-specific flags
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
-link_directories(${LLVM_LIBRARY_DIRS})
+#link_directories(${LLVM_LIBRARY_DIRS})
 
 # Add the passes directory to include paths
 include_directories(src/headers)
@@ -41,22 +41,26 @@ include_directories(src/headers)
 # Specify the main source file using the CUSTOM_MAIN_SOURCE variable
 set(MAIN_SOURCE ${CUSTOM_MAIN_SOURCE})
 
-# Add the source files for compilation
-file(GLOB SOURCES
-    src/QirModulePassManager.cpp
-    ${MAIN_SOURCE}
-)
+# Build QirModulePassManager as a shared library
+add_library(QirModulePassManager SHARED src/QirModulePassManager.cpp)
+
+# Link any necessary libraries (e.g., LLVM)
+target_link_libraries(QirModulePassManager PRIVATE LLVM)
+
+# Specify the output directory for the shared library
+set_target_properties(QirModulePassManager PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/src/passes")
 
 # Get the executable name from the CUSTOM_EXECUTABLE_NAME variable
 set(EXECUTABLE_NAME ${CUSTOM_EXECUTABLE_NAME})
 
 # Build the executable
-add_executable(${EXECUTABLE_NAME} ${SOURCES})
-
-# Include passes subdirectory
-add_subdirectory(src/passes)
+add_executable(${EXECUTABLE_NAME} ${MAIN_SOURCE})
 
 # Link the executable with LLVM and Threads libraries
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE LLVM)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE Threads::Threads)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE QirModulePassManager)
+
+# Include passes subdirectory
+add_subdirectory(src/passes)
 
