--- a/src/passes/CMakeLists.txt
+++ b/src/passes/CMakeLists.txt
@@ -1,13 +1,16 @@
-add_library(QirRemoveNonEntrypointFunctionsPass MODULE QirRemoveNonEntrypointFunctions.cpp)
+add_library(QirAllocationAnalysisPass SHARED QirAllocationAnalysis.cpp)
+
 add_library(QirBarrierBeforeFinalMeasurementsPass MODULE QirBarrierBeforeFinalMeasurements.cpp)
+add_library(QirRemoveNonEntrypointFunctionsPass MODULE QirRemoveNonEntrypointFunctions.cpp)
 add_library(QirGroupingPass MODULE QirGrouping.cpp)
 add_library(QirRemoveBasicBlocksWithSingleNonConditionalBranchInstsPass MODULE QirRemoveBasicBlocksWithSingleNonConditionalBranchInsts.cpp)
 add_library(QirReplaceConstantBranchesPass MODULE QirReplaceConstantBranches.cpp)
 add_library(QirFunctionReplacementPass MODULE QirFunctionReplacement.cpp)
 add_library(QirRedundantGatesCancellationPass MODULE QirRedundantGatesCancellation.cpp)
 add_library(QirDeferMeasurementPass MODULE QirDeferMeasurement.cpp)
-
 add_library(QirQubitRemapPass MODULE QirQubitRemap.cpp)
-add_library(QirAllocationAnalysisPass SHARED QirAllocationAnalysis.cpp)
+add_library(QirResourceAnnotationPass MODULE QirResourceAnnotation.cpp)
+
 target_link_libraries(QirQubitRemapPass PRIVATE QirAllocationAnalysisPass)
+target_link_libraries(QirResourceAnnotationPass PRIVATE QirAllocationAnalysisPass)
 
