--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+image: ubuntu:latest
+
 stages:
   - build
   - wake
@@ -6,8 +8,8 @@ stages:
 build_daemons:
   stage: build
   script:
-    - apk update
-    - apk install -y cmake llvm libopenmpi-dev g++
+    - apt update
+    - apt install -y cmake llvm libopenmpi-dev g++
     - cd qdmi
     - mkdir build
     - cd build
