--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,10 @@
 image: ubuntu:latest
-#image: ubuntu:20.04
-#
-#variables:
-#  TZ: "Europe/Berlin"
 
 before_script:
   - apt update
-  - apt install -y cmake llvm libopenmpi-dev g++
+  - apt install -y cmake llvm libopenmpi-dev g++ clang
   - export LLVM_INCLUDE_PATH=$(llvm-config --includedir)
   - export CMAKE_PREFIX_PATH=$(llvm-config --libdir)/cmake/llvm
-# - export LC_ALL=en_US.UTF-8
   - cd qdmi
   - mkdir build
   - cd build
@@ -21,15 +16,12 @@ before_script:
   - cd build
   - cmake -DCUSTOM_EXECUTABLE_NAME=qselectorrunner_d ..
   - cmake --build .
-# - export LC_ALL=en_US.UTF-8
   - echo Selector Runner built successfully
   - cd ../..
   - mkdir build
   - cd build
-# - export CMAKE_PREFIX_PATH=$(llvm-config --libdir)/cmake/llvm
   - cmake -DCUSTOM_EXECUTABLE_NAME=qpassrunner_d -DCUSTOM_QDMI_PATH=qdmi ..
   - cmake --build .
-# - export LC_ALL=en_US.UTF-8
   - echo Pass Runner built successfully
   - cd ../tests
   - mpic++ -std=c++14 test.cpp -o test
@@ -43,11 +35,7 @@ stages:
 analyze:
   stage: analyze
   script:
-    - clang --analyze -I$LLVM_INCLUDE_PATH -Iqdmi/ src/qpassrunner_d.cpp
-#    - clang --analyze -o analysis_log -I$LLVM_INCLUDE_PATH -Iqdmi/ src/qpassrunner_d.cpp
-#  artifacts:
-#    paths:
-#      analysis_log
+    - find . -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Iqdmi/ {} \;
 
 testing:
   stage: test
