Finishing the comments. The passes are still missing comments though

--- a/selector/CMakeLists.txt
+++ b/selector/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.22.1)
 project(QirPassSelector
-  VERSION 0.1
-  DESCRIPTION "QIR Pass Selector Runner")
+  VERSION 0.2
+  DESCRIPTION "QIR Selector Runner")
 
 # Set the C++ standard
 set(CMAKE_CXX_STANDARD 14)
