Minor change to build script

--- a/selector/selectors/CMakeLists.txt
+++ b/selector/selectors/CMakeLists.txt
@@ -1,7 +1,9 @@
 # Include all new selectors here
 set(SELECTORS_SOURCE_FILES
     selector_all.cpp
-    selector_basic.cpp
+    # selector1.cpp
+    # ...
+    # selectorN.cpp
 )
 
 # Compile each selector as a shared object
